# ass_parser

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
examples/: RapGod.srt  color.rs  colors.rs  create_default_subtitles.rs  modify_existing_ass_file.rs  timestamped_subtitles.rs
src/: lib.rs  parser.rs
