[package]
name = "ass_parser"
version = "0.1.7"
edition = "2021"
authors = ["Aadish M <aadishmkerala@gmail.com>"]
repository = "https://github.com/Aavtic/ass_parser"
description = "A parser for editing creating and saving .ass files."
license = "MIT OR Apache-2.0"
keywords = ["subtitle", "ASS", "parser", "SubStation-Alpha"]
readme = "README.md"

[dependencies]
hex_color = {version = "3.0.0", features = ["rand", "std"]}
rand = "0.8.5"


